# firefox-bidi-client

./: AGENT_CONTEXT.md  README.md  example.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts
examples/: check-console-errors.mjs  check-element-visibility.mjs  check-network-errors.mjs  check-ua-sniffing.mjs  form-interaction.mjs  latale-event-ui-hidden.mjs
python/: pyproject.toml
python/examples/: check_console_errors.py  check_element_visibility.py  check_network_errors.py  check_ua_sniffing.py  form_interaction.py  latale_event_ui_hidden.py
python/firefox_bidi_client/: __init__.py  bidi_connection.py  bidi_page.py  logger.py  process_manager.py  session.py
src/: bidi-connection.ts  bidi-page.ts  index.ts  logger.ts  node.ts  process-manager.ts  session.ts  types.ts
src/chrome/: README.md  index.ts  launcher.ts  resolve.ts  transport.ts
