[project]
name = "ff-test-firefox-bidi-client"
version = "0.1.0"
description = "Python client for Firefox WebDriver BiDi"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["firefox_bidi_client"]
